# self-morphing-adaptive-recursion-engine

./: .dockerignore  .env.example  .gitignore  Dockerfile  GETTING_STARTED.md  LICENSE  README.md  SECURITY.md  USAGE.md  build.sh  cli.py  docker-compose.full.yml  docker-compose.yml  fastapi_server.py  final_self_morphing_engine.py  k8s-deployment.yaml  organized_self_morphing_engine.py  pyproject.toml  requirements  semantic_cache.py  start.sh  test_engine.py  test_properties.py
.github/workflows/: tests.yml
deployment/: Dockerfile  Dockerfile.full  build.sh  docker-compose.full.yml  docker-compose.observability.yml  docker-compose.yml  k8s-deployment.yaml  requirements.txt  start.sh
deployment/observability/: prometheus.yml
deployment/observability/grafana/dashboards/: morphic-engine.json
deployment/observability/grafana/provisioning/dashboards/: dashboards.yml
deployment/observability/grafana/provisioning/datasources/: prometheus.yml
